--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 	<div class="container">
 		<div class="timer-wrapper">
-			<div class="title"><h1>Pomodoro Clock</h1></div>		
+			<div class="title">
+				<h1>Pomodoro Clock</h1>
+			</div>		
 			<div class="timer-controls">
 				<div class="controls">
 					<span>BREAK LENGTH</span>
