Added some text to interface

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 						<div class="time-bg"></div>
 						<div class="timer-indicator">
 							<div class="text">Session</div>
+							<div class="click-text">Click to start</div>
 							<div class="time"></div>
 							<div class="indicator"></div>
 						</div>
