--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css">
 	<link rel="stylesheet" href="./css/main.css">
-	
+	<script type="text/javascript" src="./js/main.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -48,6 +48,9 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="./js/main.js"></script>
+	<script>
+
+		var PomodoroClickWidget = new window.PomodoroClickWidget();
+	</script>
 </body>
 </html>
